# StackApps

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENT-SURFACE-SPEC.md  Dockerfile  README.md  VISION.md  deploy-backend.sh  deploy-mcp.sh  design_guidelines.md  firebase.json  firestore.rules  package-lock.json  package.json  pyproject.toml  requirements.txt  scanner_content_validation_prompt.md  tailwind.config.ts  vite.config.ts
.github/workflows/: publish-mcp-registry.yml
client/: index.html
client/public/: blueprint.txt  llms.txt  manifest.json  robots.txt  sitemap.xml  sw.js
client/public/.well-known/: blueprint.txt
client/public/downloads/: stackapps_mcp-0.1.1-py3-none-any.whl  stackapps_suite_mcp-0.1.2-py3-none-any.whl  stackapps_suite_mcp-0.1.3-py3-none-any.whl  stackapps_suite_mcp-0.1.4-py3-none-any.whl  stackapps_suite_mcp-0.1.5-py3-none-any.whl  stackapps_suite_mcp-0.1.7-py3-none-any.whl
client/src/: App.tsx  app-root.tsx  index.css  main.tsx  pwaTeardown.ts
client/src/components/: AppCard.tsx  AppSubmitForm.tsx  BadgeEmbed.tsx  HomeRegistryTeaser.tsx  ImageUpload.tsx  LoadingScreen.tsx  McpBlueprintTestResults.tsx  MyReviewsList.tsx  NavBar.tsx  NoIndex.tsx  ReadinessCheckHint.tsx  ReadinessScan.tsx  ReportForm.tsx  ReviewSection.tsx  RouteErrorBoundary.tsx  SiteFooter.tsx
client/src/guides/: GuideMarkdown.tsx  guideRegistry.ts
client/src/hooks/: use-current-user.ts
client/src/lib/: admins.ts  appStore.ts  entitlements.ts  (+1 more)
cloudflare/: worker.js  wrangler.toml
functions/: package-lock.json  package.json  scan-all-apps.ts
functions/src/: adminManagement.ts  badge.ts  index.ts  indexing.ts  publicScan.ts  scanner.ts  scannerContentChecks.ts  scannerFetch.ts  sitemap.ts  ssr.ts
script/: noscript-prerender-plugin.ts  noscript-routes.ts
scripts/: scan-all-apps.ts
server/: index.ts  mcp_registry.py  mcp_registry_seed.py  mcp_stubs.py  mcp_test.py  mcp_test_discovery_tools.py  mcp_test_fixtures.py  mcp_test_providers.py  mcp_test_runner.py  moderation.py  python_backend.py  ratings.py  routes.ts  shared.py  stacklaunch.py  static.ts  uploads.py
server/blueprints/: analytics-tools.txt  brand-kit.txt  calendar-tools.txt  diagram-as-code.txt  email-tools.txt  filebox-storage.txt  imagcon.txt  image-gen-tools.txt  license-font-manager.txt  localization-copydesk.txt  pdf-tools.txt  presentation-deck-ai.txt  pwa-toolkit.txt  vector-icon-pack.txt  web-perf-tools.txt
server/mcp_test_results/: seed.py
shared/: schema.ts
stackapps-mcp/: Dockerfile  JOINING-THE-GATEWAY.md  README.md  pyproject.toml  server.json
stackapps-mcp/stackapps_mcp/: __main__.py  blueprint.txt  client.py  dicta.py  http_main.py  imagcon.py  main.py  server.py  stackbill.py  x402_http.py
tests/mcp_blueprint_test/: __init__.py  runner.py  scoring.py
tests/stacklaunch/: mcp_registry_discovery_runner.py  mcp_registry_http.py
(+30 files in other folders)
