[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackapps-mcp"
version = "0.1.1"
description = "MCP server for StackApps tools including Imagcon x402 PWA assets"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abe Reimer" }]
dependencies = [
    "eth-account>=0.13.0",
    "httpx>=0.27.0",
    "mcp>=1.27.1",
    "uvicorn>=0.30.0",
    "x402[evm,clients]>=2.0.0",
]

[project.scripts]
stackapps-mcp = "stackapps_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["stackapps_mcp"]
